# apertium-dan-nor

./: .gitattributes  .gitignore  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  alt.xsl  apertium-da-nb.da-nb.dix  apertium-da-nb.da.dix  apertium-da-nb.nb-da.t1x  apertium-dan-nor.dan-nno.biprefs.rlx  apertium-dan-nor.dan-nno.lrx  apertium-dan-nor.dan-nno.lsx  apertium-dan-nor.dan-nno.rtx  apertium-dan-nor.dan-nno.t1x  apertium-dan-nor.dan-nno.t2x  apertium-dan-nor.dan-nno.t3x  apertium-dan-nor.dan-nob.lrx  apertium-dan-nor.dan-nob.lsx  apertium-dan-nor.dan-nob.rtx  apertium-dan-nor.dan-nob.t1x  apertium-dan-nor.dan-nob.t2x  apertium-dan-nor.dan-nob.t3x  apertium-dan-nor.dan-nor.arx  apertium-dan-nor.dan-nor.dix  apertium-dan-nor.dan.dix  apertium-dan-nor.dan.rlx  apertium-dan-nor.nno-dan.lrx  apertium-dan-nor.nno.dix  apertium-dan-nor.nno.rlx  apertium-dan-nor.nob-dan.lrx  apertium-dan-nor.nob-dan.t1x  apertium-dan-nor.nob.dix  apertium-dan-nor.nob.rlx  apertium-dan-nor.nor-dan.lrx  apertium-dan-nor.nor-dan.lsx  (+11 more)
WER/: Peter_Høeg.dan-nno-r64339-withunk.wiki  Peter_Høeg.dan-nno-r64339.results  Peter_Høeg.dan-nno-r64339.wiki  Peter_Høeg.dan-nno-r65301-withunk.wiki  Peter_Høeg.dan-nno-r65301.results  Peter_Høeg.dan.wiki  Peter_Høeg.nno.wiki  Slaget_om_Henderson_Field.dan-nno-r65301-withunk.wiki  Slaget_om_Henderson_Field.dan-nno-r65301.results  Slaget_om_Henderson_Field.dan-nno-r65301.wiki  Slaget_om_Henderson_Field.dan-nob-r65301-withunk.wiki  Slaget_om_Henderson_Field.dan-nob-r65301.results  Slaget_om_Henderson_Field.dan.wiki  Slaget_om_Henderson_Field.nno.wiki  Slaget_om_Henderson_Field.nob.wiki
dev/: add-words  add-words.awk  adj-sint-consistency.sh  apertium-da-nb.da-nb.dix  apertium-dan-nor.nor-dan.t1x  cuento.da.txt  cuento.nb.txt  cx_helpers.sh  dan-nor-bidix-candidates  generation-test.da-nb.sh  mono-to-bi  nb-da.test  nbkorpus5000.txt  precommit-testvoc.sh
dev/testvoc/: generation.sh  inconsistency.sh  testvoc-summary.dan-nob.txt  testvoc-summary.nob-dan.txt  testvoc.sh
t/: config.sh  hash-count  latest-pending.results  latest-regression.results  wiki-tests
test/: dan-nno-generator-expected.txt  dan-nno-input.txt  dan-nno-pending-biltrans-expected.txt  dan-nno-pending-chunker-expected.txt  dan-nno-pending-disam-expected.txt  dan-nno-pending-interchunk-expected.txt  dan-nno-pending-morph-expected.txt  dan-nno-pending-postchunk-expected.txt  dan-nno-pending-postgen-expected.txt  dan-nno-pending-postgen-gold.txt  dan-nno-postchunk-expected.txt  dan-nno-regression-biltrans-expected.txt  dan-nno-regression-chunker-expected.txt  dan-nno-regression-disam-expected.txt  dan-nno-regression-interchunk-expected.txt  dan-nno-regression-morph-expected.txt  dan-nno-regression-postgen-gold.txt  dan-nno-regression-tagger-expected.txt  dan-nob-input.txt  dan-nob-pending-generator-expected.txt  dan-nob-pending-generator-gold.txt  dan-nob-pending-input.txt  dan-nob-pending-interchunk-expected.txt  dan-nob-pending-lex-expected.txt  dan-nob-pending-postchunk-expected.txt  dan-nob-pending-tagger-expected.txt  dan-nob-regression-biltrans-expected.txt  dan-nob-regression-chunker-expected.txt  dan-nob-regression-disam-expected.txt  dan-nob-regression-generator-gold.txt  dan-nob-regression-input.txt  dan-nob-regression-morph-expected.txt  dan-nob-regression-postchunk-expected.txt  dan-nob-regression-pretransfer-expected.txt  nno-dan-biltrans-expected.txt  nno-dan-chunker-expected.txt  nno-dan-disam-expected.txt  nno-dan-generator-expected.txt  nno-dan-generator-gold.txt  nno-dan-input.txt  (+41 more)
test/expected/: dan-nno-postgen.txt  dan-nob-generator.txt  nno-dan-generator.txt  nob-dan-generator.txt
test/gold/: dan-nno-postgen.txt  dan-nob-generator.txt  nno-dan-generator.txt  nob-dan-generator.txt
texts/: finalevaluation.edited.nob-dan.dan.txt  finalevaluation.nob.txt  finalevaluation.unedited.nob-dan.dan.txt  vandrefalk.dan-nob.postedit.txt  vandrefalk.dan.txt
